# torinify

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  audio.c  dbug.sh  libcore.c  libcore.h  main.c  playback.c  sqlite.db
include/: torinify_core.h
include/audio/: audio.h
include/crossplatform/: directories.h
include/db/: exec.h  helpers.h  migrations.h  sql.h  sql_macros.h  table_repr.h  tables.h
include/db/exec/: album_table.h  mediasource_table.h  metadata_table.h  music_table.h
include/errors/: errors.h
include/media/: media.h  organization.h  scan.h  sources.h
include/metadata/: metadata.h
include/migrations/: migration.h
include/priv/: audio.h  metadata.h  playback.h  simple_playback.h
include/storage/: album.h  altname.h  artist.h  metadata.h  music.h  playlist.h
include/torinify/: core.h  metadata.h  playback.h  scanner.h  search_engine.h
include/utils/: file.h  generic_vec.h  levenshtein.h  str.h
sql/: one_init.sql
src/: _main.cx  main.c  main.c2  main.c3
src/audio/: _audio.c  audio.c  decode.c  file.c  playback.c  vector.c
src/core/: torinify_core.c
src/crossplatform/: directories.c
src/db/: _migrations.c  exec.c  helpers.c  migrations.c  tables.c
src/db/exec/: metadata_table.c  music_table.c
src/errors/: errors.c
src/media/: _scan.c1  audio.c  media.c  media.c0  organization.c  playback.c  scan.c  scan.c1  simple_playback.c
src/media_player/: audio.c
src/metadata/: metadata.c
src/migrations/: migration.c
src/storage/: album.c  altname.c  artist.c  metadata.c  music.c
src/torinify/: core.c  metadata.c  music_player.c  playback.c  scanner.c  search_engine.c
src/utils/: file.c  generic_vec.c  levenshtein.c  str.c
tests/: common.c  db.c  sh.c  test.c
tests/database/: test_album.c  test_album_artist.c  test_album_music.c  test_artist.c  test_migrations.c  test_music.c  test_music_altname.c  test_music_table.c
tests/search/: test_levenshtein.c  test_torinify.c
